Fix bg image bleed from pricing div

--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -14,6 +14,7 @@ body {
 
 .pricing {
     background-color: $gray-blue-v-light;
+    overflow: hidden;
     padding: 4.25rem 1.25rem;
     position: relative;
     text-align: center;
